--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_bg">#181A20</color>
+    <color name="line_bg">#31333A</color>
+    <color name="red">#F65555</color>
 </resources>
