--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,11 +51,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgProfile" />
 
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgPhotoEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_edit"
+        android:background="@drawable/ic_pencil"
         app:layout_constraintBottom_toBottomOf="@id/imgProfilePhoto"
         app:layout_constraintEnd_toEndOf="@id/imgProfilePhoto" />
 
@@ -65,6 +66,7 @@
         android:layout_height="wrap_content"
         android:text="@string/shalva_sarukhyan"
         android:textColor="@color/white"
+        android:layout_marginTop="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +79,8 @@
         android:layout_height="wrap_content"
         android:text="@string/number"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:layout_marginTop="5dp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
